chore(write): 학습노트 book/ 재구성 및 노트 보강 반영
- 08_cloud book/ reorg + kubernetes-in-action 노트·SVG 세분화 갱신
- 06_observability book/(opensearch·prometheus) 신규 편입
- ai-infra-gitaiops 파일명 체계 재작성, README·roadmap 갱신
- 임시 메모(AWS 요기요.md) 정리